worse but possibly better state than before

--- a/ScarySpringMan/ScarySpringMan.csproj
+++ b/ScarySpringMan/ScarySpringMan.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Patches\SpringManAIPatch.cs" />
+    <Compile Include="Patches\SpringManCustomNetworkHandler.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
